# rotz

./: .gitignore  .justfile  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  renovate.json
.github/: dependabot.yml
.github/workflows/: chat-ops-dispatch.yml  ci.yml  docs.yml  fmt-command.yml  main.yml
docs/: _config.yml  docusaurus.config.js  index.md  package-lock.json  package.json  usage.md
docs/configuration/: config.yaml.md  configuration.md  defaults.md  dot.yaml.md  examples.md  os-specific-configuration.md
docs/docs/: getting-started.md  usage.md
docs/docs/configuration/: README.md  README.mdx  _category_.yml  config.yaml.md  config.yaml.mdx  defaults.md  defaults.mdx  dot.yaml.mdx  examples.md  os-specific-configuration.md  os-specific-configuration.mdx  templating.md
docs/src/components/Features/: index.tsx
docs/src/components/TabedCodeBlock/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: install.ps1  install.sh
src/: cli.rs  config.rs  dot.rs  helpers.rs  main.rs  templating.rs
src/commands/: clone.rs  completions.rs  init.rs  install.rs  link.rs  mod.rs  sync.rs
src/dot/: defaults.rs  error.rs  mod.rs  repr.rs  test.rs
src/dot/data/directory_structure/test03/test04/: dot.yaml
src/dot/repr/: capabilities_canonical.rs  capabilities_complex.rs  dot_canonical.rs  dot_complex.rs  dot_simplified.rs  filter.rs  installs_canonical.rs  installs_complex.rs  links_complex.rs  mod.rs  selector.rs  test.rs
src/dot/test/: mod.rs
src/dot/test/data/: mod.rs
src/dot/test/data/directory_structure/test02/: dot.yaml
src/dot/test/data/directory_structure/test03/: defaults.yaml
src/dot/test/data/directory_structure/test03/test04/: defaults.yaml  dot.yaml
src/dot/test/data/directory_structure/test03/test05/: dot.yaml
src/dot/test/data/filters/: mod.rs
src/dot/test/data/filters/f02/: mod.rs
src/dot/test/data/filters/f03/: mod.rs
src/dot/test/data/filters/f04/: mod.rs
src/dot/test/data/filters/f05/: mod.rs
src/dot/test/data/selector/: mod.rs
src/dot/test/data/selector/s01/: dot.yaml
src/dot/test/data/selector/s02/: dot.yaml  mod.rs
src/dot/test/data/selector/s03/: dot.yaml  mod.rs
src/dot/test/data/selector/s04/: dot.yaml  mod.rs
src/dot/test/data/selector/s05/: dot.yaml  mod.rs
src/dot/test/data/structure/: mod.rs
src/dot/test/data/structure/s01/: dot.yaml  mod.rs
src/dot/test/data/structure/s02/: dot.yaml  mod.rs
src/dot/test/data/structure/s03/: dot.yaml  mod.rs
src/dot/test/data/structure/s04/: dot.yaml  mod.rs
src/dot/test/data/structure/s05/: dot.yaml  mod.rs
src/dot/test/data/structure/s06/: dot.yaml  mod.rs
src/dot/test/data/structure/s07/: dot.yaml  mod.rs
src/state/: mod.rs
src/templating/: mod.rs  test.rs
src/templating/test/: mod.rs
src/templating/test/data/dotfiles01/test01/: dot.yaml
src/test/: mod.rs
src/test/data/config/: config.yaml
src/test/data/dotfiles01/: config.toml
src/test/data/dotfiles02/: config.json
src/test/data/dotfiles03/: config.yaml
